--- a/css学习/task3/style.css
+++ b/css学习/task3/style.css
@@ -52,7 +52,7 @@ body{
     padding-right: 10%;
 }
 .a{
-    font-size: 20px;
+    font-size: 15px;
     margin: 15% 20% 15% 20%;
     text-align: left;
 }
@@ -66,8 +66,10 @@ p{
 
 .header img{
 
-    width: 40px;
-    height: 40px;
+    margin: 10px 10px;
+
+    width: 30px;
+    height: 30px;
 }
 .title img{
     width:auto;
