--- a/css学习/task3/style.css
+++ b/css学习/task3/style.css
@@ -9,7 +9,7 @@ img{
 
 body{
     background: #68cdd5;
-    /* text-align: center; */
+    /* text-align: center;,下一条属性不是很懂??? */
     height: 100%;
 
 }
