--- a/css学习/task5/5-1.css
+++ b/css学习/task5/5-1.css
@@ -28,7 +28,7 @@ body,html{
 
 }
 .content{
-    width: 100%;
+    /* width: 100%; */
     height: 20%;
     padding-top: 60px;
     background-image:url(pic/03.png) ;
