--- a/css学习/task5/5-1.css
+++ b/css学习/task5/5-1.css
@@ -15,7 +15,7 @@ body,html{
     display: -webkit-flex;
     justify-content:space-between ;
     align-items:center;
-   background: rgb(95,192,205);
+    background: rgb(95,192,205);
 
 }
 .img1{
@@ -28,7 +28,8 @@ body,html{
 
 }
 .content{
-    /* width: 100%; */
+    width: 100%;
+   
     height: 20%;
     padding-top: 60px;
     background-image:url(pic/03.png) ;
@@ -57,7 +58,7 @@ body,html{
     height: 15px;
 }
 .main {
-    /* width: 100%; */
+    
     height: 60%;
     /* display: -webkit-flex;
     align-content: center; */
@@ -80,18 +81,18 @@ li {
     color: red;
 }
 .text{
-    /* width:20%; */
+    
 
     margin-right: 10px;
     color: rgb(138, 135, 135);
     
 }
 
-/* 神奇的bug???330px不太懂       flex-shrink:0;这一句十分重要 */
+/*      flex-shrink:0;这一句十分重要 */
 .text2{
-    /* width: 320px; */
+    
     flex-shrink: 0;
-    /* width: 70%; */
+    
     margin-right: 10px;
     color: rgb(138, 135, 135);
 }
@@ -103,16 +104,9 @@ li {
     /* padding: 0 10px; */
 }
 
-/* .last2{ 
-    
-    margin-left: 40px;
-} */
+
 
 /* 有事莫名出现横向滚动条,不知道是什么bug */
-
-
-
-
 
 
 
