--- a/css学习/task6/6-1.css
+++ b/css学习/task6/6-1.css
@@ -16,13 +16,12 @@ body,html{
     background: rgb(94,192,260);
 }
 .content{
-    /* display: flex; */
-    
-    /* margin-top: 10%; */
+   
     height: auto ;
-    position: absolute;
-    top: 100px;
-    bottom: 60px;
+    /* position: absolute; */
+    /* top: 17.9%; */
+    /* top: 100px;
+    bottom: 60px; */
     width: 100%;
     overflow:auto;
     overflow-x: hidden;
@@ -39,6 +38,11 @@ body,html{
     text-align: center;
 
 }
+/* li div{
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+} */
 .bn{
     font-size: 18px;
     
@@ -74,12 +78,13 @@ body,html{
     text-align: center;
     top: 10%;
     border-bottom:1px solid #e2e4e5;
+    background:white;
 }
 .bt_1{
     
     margin: 10px 0;
     min-width: 32%;
-    max-width: 33%;
+    max-width: 32%;
     /* padding-left: 20px; */
     outline: none;
     
@@ -127,11 +132,13 @@ li {
     overflow: hidden;
     width: 40%;
     margin-left: 20px;
+    margin-top: 5px;
 }
 .wz_1{
     display: flex;
     float: right;
     margin-right: 20px;
+    margin-top: 5px;
 }
 .price{
     color:red;
@@ -162,8 +169,11 @@ li {
 }
 li div{
     margin: 3px 0;
+    
 }
-
+/* div.wz{
+    padding-top: 5px;
+} */
 
 
 
