--- a/css学习/task7/7-1.css
+++ b/css学习/task7/7-1.css
@@ -20,7 +20,7 @@ html,body {
 .recent{
     
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     height: 10%;
     margin: 20px;
@@ -59,7 +59,7 @@ html,body {
     justify-content: center;
     align-items: center;
     height: 60px;
-    margin: 15px;
+    margin: 15px 30px;
     font-size: 16px;
     color: white;
     background: rgb(105, 209, 233);
@@ -70,4 +70,44 @@ html,body {
     justify-content: center;
     align-items: center;
     color: rgb(154,154, 154);
+}
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.cle{
+    display: inline-block;
+    text-align: center;
+    width: 10px;
+    height: 10px;
+    margin: auto 5px;
+    border-radius: 50%;
+    background: rgb(41,198 ,224);
+
+}
+.cle_2{
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    margin: auto 5px;
+    border-radius: 50%;
+    background: rgb(240, 240, 240);
+}
+.pic_1{
+    width: 25px;
+    margin: 10px;
+}
+.pic_2{
+    margin-top: 32px;
+    margin-right: 8px;
+    float: right;
+    width: 12px;
+    
+}
+.pic_3{
+    
+    /* display: block; */
+    float: right;
+    width: 12px;
 }
