--- a/css学习/task7/7html/7-2.css
+++ b/css学习/task7/7html/7-2.css
@@ -6,52 +6,188 @@ html,body{
     width: 100%;
     height: 100%;
     background: rgb(41,189,224);
+    /* overflow-x: hidden; */
+}
+a{
+    text-decoration: none;
+    outline: none;
+    color:white;
+}
+/* 需要加上宽度,不然会坍缩 ,不设背景颜色会默认是透明的*/
+.fix{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1;
 }
 .header{
+   
+   
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 10%;
+    height: 3em;
+    /* z-index: 1; */
+    background: rgb(41,189,224);
     
 }
 .pic_left{
-
+    width: 30px;
+    margin-left: 10px;
 }
 .h_center{
     font-size: 18px;
     color: white;
 }
 .pic_right{
-
+    width: 25px;
+    margin-right: 10px;
 }
 .tip{
-    display: flex;
-    height: 10%;
+  
+    top: 8%;
+
+    height:2.5em;
     background: rgb(185,233,245);
+   
+    display: flex;
+    justify-content: space-between;
     align-items: center;
 }
 .tip_1{
-    width: 100%;
-    margin: 0px auto;
+   
+   padding-left:  2rem;
+    background: rgb(41,189,224);
     
+}
+.video{
+    /* width: 100px; */
+    right: -15rem;
+    position: absolute;
+    z-index: 2;
+    opacity: 0;
+}
+.pic_vide{
+   
+    width: 30px;
+    margin-right: 1rem;
+}
+.sj{
+    /* margin: 0 10vw; */
+    width: 0;
+    height: 0;
+    border-style:solid;
+    border-width:10px;
+    border-color:  #b9e9f5 transparent transparent transparent;
+}
+/* .pic_tr{
+    width: 10px;
+    padding-top: 0;
+} */
+.wz{
+    margin-left: 2rem;
 }
 .wz_1{
     font-size: 15px;
-    margin: 0px 20px;
+    /* margin: 0px 20px; */
     color: white;
 }
+
+
+.content{
+    margin-top: 8rem;
+    margin-bottom: 6rem;
+
+}
+div.main{
+    margin-top: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+}
 .box{
-    position: relative;
-    width:60px;
-    height: 60px;
-    margin: 20px;
+    /* display: flex;
+    flex-direction:row; */
+    /* box-sizing:border-box;
+    width: 33%; */
+     /* width:60px; */
+    position: relative; 
+    cursor: pointer;
+    width: 21vw;
+    height: 21vw;
+    margin: 3vw;
+    float: left; 
+    display: flex;
+    flex-direction: column;
+    /* justify-content:space-around; */
     border: 5px solid white;
     background: rgb(245,201,123);
     text-align: center;
 }
+
+/*背景图片的路径为/不能是\ */
+/* .box_name:hover{
+   
+    content: "";
+    background: url(././pic/spite.png);
+  
+    background-repeat: no-repeat;
+ 
+    
+   
+} */
+.image-1,
+.image-2,
+.image-3,
+.image-4 {
+    background: url(./pic/sprite3.png);
+    background-repeat: no-repeat;
+    width: 15px;
+    height: 15px;
+    z-index:3;
+}
+
+.image-1 {
+    
+    background-position: 0 0;
+}
+
+.image-2 {
+
+    background-position: 0 -23px;
+
+}
+
+.image-3{
+    background-position: 0 -45px;
+
+}
+
+.image-4{
+    background-position: 0 -69px;
+}
+.image-box {
+    padding-top:7.5vw;
+    /* width: 21vw;
+    margin-left: -0.25rem; */
+    /* visibility:hidden; */
+
+} 
+
+.box:hover .image-box{ 
+
+ display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    visibility:visible;
+}
+
+
+
+
+
 /* 这里的尺寸设置出现问题 */
 .box_name{
-    line-height: 45px;
+    line-height: 18vw;
   
     
 }
@@ -59,7 +195,8 @@ html,body{
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 15px;
+    height: 5vw;
+    line-height: 5vw;
     font-size: 10px;
     color: white;
     background: rgb(131,176,154);
@@ -84,11 +221,30 @@ html,body{
     width: 100%;
     height: 15%;
     position: fixed;
+    
     bottom: 0;
     text-align: center;
+    
+    background:rgb(41,189,224);
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* border-top: 2px solid white;
+    border-top-width: calc(100%-6vw); */
+
+
+}
+.footer:before {
+    content: '';
+    position: absolute;
    
-
-
+    top: 0;
+    bottom: auto;
+    right: auto;
+    height: 2px;
+    width: calc(100% - 6vw);
+    background-color: #ffffff;
 }
 .bt{
     font-size: 18px;
