--- a/css学习/task7/7html/7-2.css
+++ b/css学习/task7/7html/7-2.css
@@ -143,7 +143,7 @@ div.main{
     background-repeat: no-repeat;
     width: 15px;
     height: 15px;
-    z-index:3;
+    /* z-index:3; */
 }
 
 .image-1 {
@@ -166,7 +166,9 @@ div.main{
     background-position: 0 -69px;
 }
 .image-box {
-    padding-top:7.5vw;
+    margin-top: calc(5vw + 10px) ;
+    /* padding-top:7.5vw; */
+    /* width: calc(100% - 6vw); */
     /* width: 21vw;
     margin-left: -0.25rem; */
     /* visibility:hidden; */
