--- a/css学习/task8/8-1.css
+++ b/css学习/task8/8-1.css
@@ -130,6 +130,7 @@ div#carousel-example-generic {
     
 }
 .box-line{
+    /* margin-top:0;  */
     border-left: dashed 2px rgb(180, 178, 178);
 }
 .box1{
@@ -205,7 +206,7 @@ h4~p{
     
     width: 15px;height: 15px;
     border-radius: 50%;
-    border: #c5c2c2 2px solid;
+    border: #ebe8e8 2px solid;
     list-style: none;
 
     /* display: inline-block;
@@ -245,10 +246,18 @@ h4~p{
     border: 2px solid #ffffff;
 }
 
+.link-f{
+    display: flex;
+    margin: 2em 3em;
+    /* flex-direction: row; */
+    flex-wrap: wrap;
+    justify-content: space-around;
+    
+}
 .link-f li{
     /* display: inline-block; */
-    display: inline-flex;
-    flex-direction: row;
+    margin:0.6em ;
+    color: #cecdcd;
 
 }
 
@@ -275,11 +284,11 @@ footer{
 }
 
 .p1{
-    font-size: 1.5em;
+    font-size: 1.4em;
     /* font-weight: bold; */
 }
 .p2{
-    font-size: 1.2em;
+    font-size: 1.1em;
 }
 .bottom-font{
     text-align: center;
