--- a/css学习/task8/8-3.css
+++ b/css学习/task8/8-3.css
@@ -103,8 +103,70 @@ div.nav {
     text-align: center;
 }
 
+/* 内容主体 */
+.box-set{
+    border: 2px solid #e0dfdf;
+    margin-top: 1em;
+    /* padding: 1em; */
+  
+}
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover{
+    background: #52c595;
+
+}
+.opacity-box{
+    /* width: 100%;
+    height: 100%;
+   
+    */
+    /* right: 0;
+    bottom: 0;
+    margin: auto; */
+    /* transform: translate(-50%,-50%) */
+    position: absolute;
+     top: 0;
+    left: 0;
+    height: 100%;
+    display: flex;
+    /* flex-flow: column nowrap; */
+    flex-direction: column; 
+    /* justify-items: center;  只对单根轴线会产生作用 */
+    justify-content: center;
+    text-align: center;
+    /* text-align: left; */
+    opacity:0;
+    font-size: 1.2em;
+    padding: 1.2em;
+    
+    color: white;
+    background: rgba(0,0,0,0.5);
 
 
+   
+}
+.opacity-box:hover{
+    opacity: 1;
+
+    
+}
+
+
+
+
+
+
+
+
+.media{
+    padding: 1em;
+}
+.table-striped .age{
+    border-left: solid 2px #e0dfdf;
+}
+/* table.table.table-striped {
+    border-left:none;
+    border-right:none;
+} */
 
 
 
