--- a/css学习/task4/style4.css
+++ b/css学习/task4/style4.css
@@ -34,6 +34,18 @@ body,html{
     
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
 .footer{
 
 }
@@ -116,5 +128,8 @@ input{
     
    
   
+}
+input::-webkit-input-placeholder{
+    color:#cccc;
 }
 
