--- a/css学习/task8/8-3.css
+++ b/css学习/task8/8-3.css
@@ -123,6 +123,8 @@ div.nav {
     bottom: 0;
     margin: auto; */
     /* transform: translate(-50%,-50%) */
+
+    
     position: absolute;
      top: 0;
     left: 0;
@@ -145,9 +147,30 @@ div.nav {
    
 }
 .opacity-box:hover{
-    opacity: 1;
+    animation: flipInX 8s ;
+    /* opacity: 1; */
 
     
+}
+@keyframes flipInX {
+    0% {
+        transform: perspective(400px) rotateX(90deg);
+        opacity: 0;
+    }
+
+    40% {
+        transform: perspective(400px) rotateX(-10deg);
+    }
+
+    60% {
+        transform: perspective(400px) rotateX(10deg);
+        opacity: 1;
+    }
+
+    100% {
+        transform: perspective(400px) rotateX(0);
+        opacity: 1;
+    }
 }
 
 
