--- a/css学习/task8/8-1.css
+++ b/css学习/task8/8-1.css
@@ -170,7 +170,8 @@ div#carousel-example-generic {
     height: 2.6rem;
     padding: 2.6rem;
     border-radius: 50%;
-    border: 0.2rem solid #ececec;
+    /* border: 0.2rem solid #ececec; */
+    box-shadow: 0 1px 3px 0 rgba(8, 1, 3, 0.5);
     background-color: #fff;
     color: #29b078;
     font-size: 1.7rem;
@@ -185,6 +186,13 @@ div#carousel-example-generic {
 
 .text-center{
     background: rgb(252, 250, 250);
+    margin-bottom: 20px;
+}
+
+.text-center img:hover{
+    box-shadow: 0 -3px 10px rgba(8, 1, 3, 0.5);
+
+
 }
 h4~p{
     color: rgb(184, 177, 176);
@@ -289,6 +297,12 @@ footer{
 }
 .p2{
     font-size: 1.1em;
+}
+
+
+.p2 span:hover{
+    border-bottom: solid 2px white;
+
 }
 .bottom-font{
     text-align: center;
