--- a/css学习/jsTask5/task5.css
+++ b/css学习/jsTask5/task5.css
@@ -1,20 +1,22 @@
-*{
+* {
     padding: 0;
     margin: 0;
 }
-body{
+
+body {
     background: rgb(218, 218, 218);
     /* opacity: .8; */
 }
 
 
-.main{
-    position: absolute ;
-    width: 300px;height: 300px;
+.main {
+    position: absolute;
+    width: 300px;
+    height: 300px;
     background: rgb(245, 240, 240);
-    top:50%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     display: flex;
     /* 这个确定了主轴的排列方向 */
     flex-direction: column;
@@ -23,33 +25,34 @@ body{
     /* align-content: space-between; */
     text-align: center;
     border-radius: 10px;
-    
+
 }
 
 
-.header{
+.header {
     color: #68cdd5;
     /* 使用这个都会一起移动,其依法动全身; */
     /* margin-top: -30px; */
     font-weight: bold;
 }
 
-input{
+input {
     width: 80%;
     height: 30px;
     margin: 10px;
     border-radius: 3px;
     /* outline: #68cdd5; */
 }
-input::placeholder{
+
+input::placeholder {
     color: #ccc;
 }
 
-input:focus{
-    border: #68cdd5 1px inset ;
+input:focus {
+    border: #68cdd5 1px inset;
 }
 
-button{
+button {
     font-size: 20px;
     margin-top: 20px;
     width: 90%;
@@ -58,6 +61,7 @@ button{
     color: aliceblue;
     background: #68cdd5;
 }
-button:hover{
+
+button:hover {
     opacity: .8;
 }
