--- a/css学习/task8/8-3.css
+++ b/css学习/task8/8-3.css
@@ -1,244 +1,191 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 html,
 body {
-
-    background: #FAFAFA;
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
+  background: #fafafa;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
-
-
-
 .top-text {
-   
-    font-size: 1.2rem;
-    margin-top: 1rem ;
-    
-    color: #29b078;
+  font-size: 1.2rem;
+  margin-top: 1rem;
 
+  color: #29b078;
 }
 
 .top-icon {
+  float: right;
 
-    float: right;
-
-    margin-top: 1.5rem ;
-
-
-
+  margin-top: 1.5rem;
 }
 
 a.icon-1 {
-    padding: 12px;
-    padding-right: 30px;
-    background: url(./pic/img.png) no-repeat;
-    background-position: 0 0;
+  padding: 12px;
+  padding-right: 30px;
+  background: url(./pic/img.png) no-repeat;
+  background-position: 0 0;
 }
 
 a.icon-2 {
-    padding: 12px;
-    padding-right: 30px;
-    background: url(./pic/img.png)no-repeat;
-    background-position: 0 -40px;
+  padding: 12px;
+  padding-right: 30px;
+  background: url(./pic/img.png) no-repeat;
+  background-position: 0 -40px;
 }
 
 a.icon-3 {
-    padding: 12px;
-    padding-right: 30px;
-    background: url(./pic/img.png)no-repeat;
-    background-position: 0 -80px;
+  padding: 12px;
+  padding-right: 30px;
+  background: url(./pic/img.png) no-repeat;
+  background-position: 0 -80px;
 }
 
 .navbar-brand.header-title {
-    display: inline-flex;
+  display: inline-flex;
 
-    flex-direction: column;
-    justify-content: center;
-    color: aliceblue;
-    margin-top: 10px;
-    font-size: 2em;
-    /* padding: 0; */
-    font-weight: bold;
+  flex-direction: column;
+  justify-content: center;
+  color: aliceblue;
+  margin-top: 10px;
+  font-size: 2em;
+  /* padding: 0; */
+  font-weight: bold;
 }
 
-.header-title>span {
-    color: aliceblue;
-    font-size: 0.1em;
-    /* width: 20px; */
-
+.header-title > span {
+  color: aliceblue;
+  font-size: 0.1em;
+  /* width: 20px; */
 }
 
-li>a:hover {
-    content: "";
-    /* height: 3px; */
-    border-bottom: #FAFAFA solid 3px;
+li > a:hover {
+  content: "";
+  /* height: 3px; */
+  border-bottom: #fafafa solid 3px;
 }
 
 div.nav {
-    /* width: 100%; */
-    background: #29b078;
+  /* width: 100%; */
+  background: #29b078;
 }
 
-.navbar-default .navbar-nav>.active>a,
-.navbar-default .navbar-nav>.active>a:focus,
-.navbar-default .navbar-nav>.active>a:hover {
-    background: #52c595;
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:focus,
+.navbar-default .navbar-nav > .active > a:hover {
+  background: #52c595;
 }
 
 .navbar-default .navbar-toggle:focus,
 .navbar-default .navbar-toggle:hover {
-    background: #489c7b;
+  background: #489c7b;
 }
-.navbar-collapse{
-    text-align: center;
+.navbar-collapse {
+  text-align: center;
 }
 
 /* 内容主体 */
-.box-set{
-    border: 2px solid #e0dfdf;
-    margin-top: 1em;
-    /* padding: 1em; */
-  
+.box-set {
+  border: 2px solid #e0dfdf;
+  margin-top: 1em;
+  /* padding: 1em; */
 }
-.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover{
-    background: #52c595;
-
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:focus,
+.nav-tabs > li.active > a:hover {
+  background: #52c595;
 }
-.opacity-box{
-    /* width: 100%;
+.opacity-box {
+  /* width: 100%;
     height: 100%;
    
     */
-    /* right: 0;
+  /* right: 0;
     bottom: 0;
     margin: auto; */
-    /* transform: translate(-50%,-50%) */
+  /* transform: translate(-50%,-50%) */
 
-    
-    position: absolute;
-     top: 0;
-    left: 0;
-    height: 100%;
-    display: flex;
-    /* flex-flow: column nowrap; */
-    flex-direction: column; 
-    /* justify-items: center;  只对单根轴线会产生作用 */
-    justify-content: center;
-    text-align: center;
-    /* text-align: left; */
-    opacity:0;
-    font-size: 1.2em;
-    padding: 1.2em;
-    
-    color: white;
-    background: rgba(0,0,0,0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  display: flex;
+  /* flex-flow: column nowrap; */
+  flex-direction: column;
+  /* justify-items: center;  只对单根轴线会产生作用 */
+  justify-content: center;
+  text-align: center;
+  /* text-align: left; */
+  opacity: 0;
+  font-size: 1.2em;
+  padding: 1.2em;
 
-
-   
+  color: white;
+  background: rgba(0, 0, 0, 0.5);
 }
-.opacity-box:hover{
-    animation: flipInX 8s ;
-    /* opacity: 1; */
-
-    
+.opacity-box:hover {
+  animation: flipInX 10s;
+  opacity: 1;
 }
 @keyframes flipInX {
-    0% {
-        transform: perspective(400px) rotateX(90deg);
-        opacity: 0;
-    }
+  0% {
+    transform: perspective(400px) rotateX(90deg);
+    opacity: 0;
+  }
 
-    40% {
-        transform: perspective(400px) rotateX(-10deg);
-    }
+  40% {
+    transform: perspective(400px) rotateX(-10deg);
+  }
 
-    60% {
-        transform: perspective(400px) rotateX(10deg);
-        opacity: 1;
-    }
+  60% {
+    transform: perspective(400px) rotateX(10deg);
+    opacity: 1;
+  }
 
-    100% {
-        transform: perspective(400px) rotateX(0);
-        opacity: 1;
-    }
+  100% {
+    transform: perspective(400px) rotateX(0);
+    opacity: 1;
+  }
 }
 
-
-
-
-
-
-
-
-.media{
-    padding: 1em;
+.media {
+  padding: 1em;
 }
-.table-striped .age{
-    border-left: solid 2px #e0dfdf;
+.table-striped .age {
+  border-left: solid 2px #e0dfdf;
 }
 /* table.table.table-striped {
     border-left:none;
     border-right:none;
 } */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* 尾部 */
 
-footer{
-    /* height: 20em; */
-    background: #29b078;
-    color: white;
+footer {
+  /* height: 20em; */
+  background: #29b078;
+  color: white;
 }
-.bottom-box{
-    padding-top: 4em;
-}
-
-.p1{
-    font-size: 1.4em;
-    /* font-weight: bold; */
-}
-.p2{
-    font-size: 1.1em;
-}
-.bottom-font{
-    text-align: center;
-    bottom: 0;
+.bottom-box {
+  padding-top: 4em;
 }
 
-
-
+.p1 {
+  font-size: 1.4em;
+  /* font-weight: bold; */
+}
+.p2 {
+  font-size: 1.1em;
+}
+.bottom-font {
+  text-align: center;
+  bottom: 0;
+}
